11/08/2025 - 12h10 : - Déplacement des fichiers dans des dossiers regroupant le composant + le CSS - Ajout du CSS pour les composants "Banner", "Card", "Cards", "Collapse", "Footer" et "Navigation". - Ajout du Footer dans la page à propos - Ajout d'un main dans la page Home qui compartimentalise Banner et Cards - Ajout de Navigate/UseNavigate dans la page Logement. C'est rudimentaire pour le moment et va probablement devoir être modifié.

--- a/FrontEnd/src/Components/Navigation/Navigation.css
+++ b/FrontEnd/src/Components/Navigation/Navigation.css
@@ -1,11 +1,12 @@
 .entete {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 40px;
 }
 
 ul{
     display: flex;
-    gap: 10px;
+    gap: 60px;
     list-style: none;
 }
 
@@ -15,4 +16,17 @@ ul{
 
 .logo-link {
     display: inline-block;
+}
+
+li a {
+    color: black;
+    font-size: 24px;
+}
+
+li a:hover {
+    color: black;
+}
+
+.liActif {
+    text-decoration: underline;
 }
