--- a/FrontEnd/src/Components/Cards/cards.css
+++ b/FrontEnd/src/Components/Cards/cards.css
@@ -5,10 +5,10 @@
 	flex-wrap: wrap;
 	gap: 30px;
 	justify-content: space-around;
-	margin-top: 22px;
+	margin-bottom: 50px;
+	margin-left: auto;
+	margin-right: auto;
 	padding: 60px;
-}
-
-.cards a {
-    width: 40%;
+	width: 1240px;
+	
 }
