11/08/2025 - 23h15 : - Modifications légères de Card.jsx pour pouvoir mettre en place le CSS nécessaire - Mise en place du CSS sur Card. - La même chose a été faite sur Collapse.jsx - Même chose pour Host.jsx - Création du fichier Host.css, tout le css nécessaire a été mis en place. - Ajout du CSS sur la page About.jsx et ajout d'une section pour contenir tous les Collapse présents
- Enfin, modifications sur Rating.jsx :
- Suppression du useParams
- Suppression de rate.map et de la boucle for() pour y mettre un Array à la place (plus simple).

--- a/FrontEnd/src/Components/Collapse/Collapse.css
+++ b/FrontEnd/src/Components/Collapse/Collapse.css
@@ -1,4 +1,4 @@
-.collapse {
+.collapseTitle {
     background-color: #ff6060;
     border-radius: 10px;
     display: flex;
@@ -6,18 +6,33 @@
     padding: 10px;
     padding-left: 15px;
     padding-right: 20px;
-    align-items: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    align-items: center;    
 }
 
-.collapse img {
+.collapseContainer {
+    width: 100%;
+}
+
+.collapseTitle img {
     height: 13px;
 }
 
-.collapse p {
+.collapseTitle p {
     margin: 0px;
     font-size: 24px;
     font-weight: bold;
     color: white;
+}
+
+
+
+.collapseText {
+    background-color: #f6f6f6;
+    font-size: 18px;
+    font-weight: 400;
+    padding: 20px;
+    border-radius: 5px;
+    flex-direction: column;
+    display: flex;
+    text-align: justify;
 }
