--- a/FrontEnd/src/Components/Card/card.css
+++ b/FrontEnd/src/Components/Card/card.css
@@ -1,17 +1,14 @@
 .card {
     height: 340px;
     width: 340px;
+    display: flex;
+    align-items: end;
 }
 
-article img {
+.card img {
 	border-radius: 10px;
 	width: 340px;
     height: 340px;
-}
-
-article {
-    display: flex;
-    align-items: end;
 }
 
 .p_logement {
@@ -23,8 +20,4 @@ article {
     margin-bottom: 20px;
     width: 300px;
     text-align: left;
-}
-
-article p {
-    margin: 0px;
 }
