12/08/2025 - 11h50 : - Mise en place de tout le CSS pour la version Desktop. - Il est possible que certaines transitions devront être rajoutées. A voir avec le mentor. - Début de mise en place du CSS de la version tablette.

--- a/FrontEnd/src/Components/Navigation/Navigation.css
+++ b/FrontEnd/src/Components/Navigation/Navigation.css
@@ -1,7 +1,8 @@
+
+
 .entete {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 40px;
 }
 
 ul{
@@ -29,4 +30,13 @@ li a:hover {
 
 .liActif {
     text-decoration: underline;
+    text-underline-offset: 3px;
+    text-decoration-thickness: 1.5px;
+    
+}
+
+@media (max-width: 1024px) {
+  header {
+    width: 100%;
+  }
 }
