--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -1,5 +1,53 @@
 #root {
-  max-width: 1440px;
   margin: 0 auto;
   font-family: 'Montserrat';
+}
+
+header {
+    width: 1240px;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 209px;
+}
+
+main {
+  flex: 1;
+  width: 1240px;
+  margin: auto;
+}
+
+body {
+  margin: 0;
+  min-width: 320px;
+  height: 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
+.rooty {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;  
+}
+
+button {
+  cursor: pointer;
+}
+
+@media (max-width: 1024px) {
+  body, header, main, footer {
+    width: 100%;
+  }
 }
