--- a/FrontEnd/src/Components/Cards/cards.css
+++ b/FrontEnd/src/Components/Cards/cards.css
@@ -3,12 +3,9 @@
 	border-radius: 25px;
 	display: flex;
 	flex-wrap: wrap;
-	gap: 30px;
-	justify-content: space-around;
+	gap: 50px;
+	justify-content: center;
 	margin-bottom: 50px;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 60px;
-	width: 1240px;
-	
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
