--- a/FrontEnd/src/Components/Collapse/Collapse.css
+++ b/FrontEnd/src/Components/Collapse/Collapse.css
@@ -15,6 +15,16 @@
 
 .collapseTitle img {
     height: 13px;
+    transform: rotate(180deg);
+    cursor: pointer;
+}
+
+.arrow {
+    transition: transform 300ms ease;
+}
+
+.arrow.Up {
+    transform: rotate(0deg);
 }
 
 .collapseTitle p {
@@ -30,9 +40,22 @@
     background-color: #f6f6f6;
     font-size: 18px;
     font-weight: 400;
-    padding: 20px;
     border-radius: 5px;
     flex-direction: column;
     display: flex;
     text-align: justify;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 300ms, padding 300ms, opacity 300ms;
+    transform-origin: 50% top;
+    padding: 0px 20px 0px 20px;
+    opacity: 0;
+    line-height: 1.3;
+    gap: 2px;
+}
+
+.collapseText.Out {
+    max-height: 500px;
+    padding: 20px;
+    opacity: 1;
 }
