--- a/FrontEnd/src/Components/Footer/Footer.css
+++ b/FrontEnd/src/Components/Footer/Footer.css
@@ -1,10 +1,7 @@
-footer {
-    background-color: black;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 209px;
-    width: 1440px;
+
+
+@media (max-width: 1024px) {
+  footer {
+    width: 100%;
+  }
 }
