--- a/FrontEnd/src/Style/About.css
+++ b/FrontEnd/src/Style/About.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     margin: auto;
-    width: 1024px;
+    max-width: 1088px;
     margin-bottom: 30px;
     gap: 30px;
 }
