12/08/2025 - 19h10 : - Ajout du CSS pour le responsive téléphone - Ajout du CSS pour la page Error (je l'avais oublié)

--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -70,4 +70,10 @@ button {
         padding: 0px;
         box-sizing: border-box;
     }
+
+    header, main {
+      width: 90%;
+      margin: auto;
+    }
+  
 }
