--- a/FrontEnd/src/Components/Appartment/Appartment.css
+++ b/FrontEnd/src/Components/Appartment/Appartment.css
@@ -33,3 +33,21 @@
     align-items: center;
     justify-content: center;
 }
+
+@media (max-width: 768px) {
+    .InformationsLogement h2 {
+        font-size: 18px;
+    }
+
+    .InformationsLogement h3 {
+        font-size: 14px;
+        margin-bottom: 10px;
+    }
+
+    .Tag {
+        font-size: 10px;
+        width: 100px;
+        height: 18px;
+        border-radius: 5px;
+    }
+}
