--- a/FrontEnd/src/Components/Banner/banner.css
+++ b/FrontEnd/src/Components/Banner/banner.css
@@ -28,3 +28,37 @@
     font-size: 48px;
     text-shadow:  0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+@media (max-width: 768px) {
+    .banner_about img {
+        width: 335px;
+        height: 111px;
+        border-radius: 10px;
+    }
+
+    .banner_home img {
+        width: 335px;
+        height: 111px;
+        border-radius: 10px;
+        box-shadow: none;
+    }
+
+    .banner_about {
+        margin-bottom: 20px;
+    }
+
+    .banner_home {
+        margin-bottom: 20px;
+        position: relative;
+        display: flex;
+        justify-content: center;
+    }
+
+    .banner_home h1 {
+        font-size: 24px;
+        width: 225px;
+        margin-right: 80px;
+        text-shadow: none;
+    }
+
+}
