--- a/FrontEnd/src/Components/Cards/cards.css
+++ b/FrontEnd/src/Components/Cards/cards.css
@@ -9,3 +9,12 @@
 	padding-top: 50px;
 	padding-bottom: 50px;
 }
+
+@media (max-width: 768px) {
+	.cards {
+		padding: 0;
+		background-color: transparent;
+		gap: 20px;
+		margin-bottom: 20px;
+	}
+}
