--- a/FrontEnd/src/Style/About.css
+++ b/FrontEnd/src/Style/About.css
@@ -6,3 +6,10 @@
     margin-bottom: 30px;
     gap: 30px;
 }
+
+@media (max-width: 768px) {
+    .aboutCollapseContainer {
+        gap: 20px;
+        margin-bottom: 20px;
+    }
+}
