19/08/2025 - 22h45 : - Ajout des dépendances nécessaires pour faire les tests - Ajout de commentaires sur tous les .jsx quand cela est nécessaire.

--- a/FrontEnd/src/Style/Error.css
+++ b/FrontEnd/src/Style/Error.css
@@ -21,7 +21,8 @@
 }
 
 .Error a {
-    margin-top: 150px;
+    margin-top: 100px;
+    margin-bottom: 125px;
     color: black;
     text-decoration: underline;
     font-weight: 500;
